--- a/main.css
+++ b/main.css
@@ -272,7 +272,7 @@ body {
   position: absolute;
   top: calc(50% - 25px);
   left: calc(50% - 30px);
-  background-image: url(/img/Снимок\ экрана\ 2025-03-24\ 225032.png);
+  background-image: url(/Project.Portfolio/img/Снимок\ экрана\ 2025-03-24\ 225032.png);
   background-size: cover;
   border-radius: 15px;
 }
