--- a/main.css
+++ b/main.css
@@ -7,19 +7,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
 }
+
 
 body {
     overflow-x: hidden;
+    min-width: 100vw;
     min-height: 100vh;
-    width: 100%;
     font-family: Arial, sans-serif;
     background-image: url(https://images.wallpaperscraft.ru/image/single/fon_nebo_tochki_83482_1920x1080.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: no-repeat; 
     background-attachment: fixed; 
     margin: 0;
 }
@@ -28,14 +28,6 @@ body {
     --size: 50px;
     --th: 5px;
 }
-
-.container_all {
-  display: flex;
-  flex-direction: column; 
-  min-height: 100vh;
-}
-
-
 
 #preLoader {
   position: fixed;
@@ -99,14 +91,13 @@ body {
 
 .container{
     max-width: 1200px;
-    margin: 0;
     padding: 20px;
     color: silver;
     width: 240px;
     height: 294px;
     perspective: 900px;
     position: absolute;
-    top: 50%;
+    top: 500px;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -437,6 +428,8 @@ body {
 }
 
 #container_aboutme {
+  display: flex;
+  flex-direction: column;
     top: 800px;
     margin: 0 auto;
     text-align: center;
@@ -444,10 +437,10 @@ body {
     width: 700px;
     height: 300px;
     position: relative;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif cursive;
     border-radius: 50px;
     padding: 20px 20px;
     background-color: #6b5b98;
+    text-align: start;
     background: linear-gradient(45deg, #0747f7, #ce4c00);
     z-index: 0;
 }
@@ -489,14 +482,58 @@ body {
     border-radius: 50px;
     color: white;
     border: 2px solid #6b5b98;
-    background: linear-gradient(to right, #280185ab, #01618da4);
+    background-image: linear-gradient(144deg,#7b00aca4, #4a1cb8b9 50%,#00757e);
     cursor: pointer;
     display: block;
     transform: translate(-50%, -50%);
     animation: glow 1.5s infinite, gradient 3s ease infinite;
-    z-index: 0;
-    
+    z-index: 0; 
 }
+.card__code {
+  width: 300px;
+  height: 370px;
+  margin: 0 auto;
+  background-color: #181644;
+  border-radius: 8px;
+  z-index: 1;
+  box-shadow: 0px 10px 10px rgb(33, 32, 37);
+  transition: 0.5s;
+}
+.top {
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+.header-code {
+  margin: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+
+#title2 {
+  color: white;
+  padding-left: 100px;
+  font-size: 15px;
+  margin-top: 3px;
+}
+
+.code-container {
+  text-align: center;
+  
+}
+#code {
+  overflow-y: hidden;
+  width: 270px;
+  height: 300px;
+  margin-top: 10px;
+  resize: none;
+  background-color: rgb(73, 70, 92);
+  border-radius: 5px;
+  border: none;
+  color: white;
+  padding: 5px;
+}
+
 .break {
     flex-basis: 100%;
     height: 0;
@@ -510,7 +547,7 @@ body {
     width: 65%;
     margin: 0 auto;
     display: flex;
-    margin-top: 110vh;
+    top: 1000px;
 }
 
 .myMade {
@@ -529,12 +566,11 @@ body {
     width: 300px; 
     height: 400px;
     padding: 20px;
-    background: linear-gradient(45deg, #6624ffb9, #9400cea4); 
-    border: 5px solid #493a81;
     color: rgb(255, 255, 255);
     text-align: center; 
-    border-radius: 8px; 
-    box-shadow: 1px 4px 8px rgba(36, 35, 35, 0.2);  
+    border-radius: 8px;
+    background-image: linear-gradient(144deg,#9400cea4, #6624ffb9 50%,#00757e); 
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;  
     overflow: hidden; 
 }
 
@@ -733,113 +769,78 @@ body {
   top: -10px;
 }
 
-.button_1 {
-  transform: rotate(-25deg) skew(25deg);
-  transform-style: preserve-3d;
+.btn {
   position: relative;
-  margin-top: 90%;
-  list-style: none;
-  width: 100px;
-  height: 32px;
-  border: none;
+  width: 150px;
+  height: 80px;
+  padding: 10px 20px;
+  border-radius: 7px;
+  border: 1px solid rgb(61, 106, 255);
+  font-size: 14px;
+  top: 30%;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
   background: transparent;
-  font-family: inherit;
-  cursor: pointer;
-}
-
-.button_1:before {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: -5px;
-  width: 100%;
-  height: 10px;
-  background: #2a2a2a;
-  transform: skewX(-41deg);
-}
-
-.button_1:after {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -9px;
-  width: 9px;
-  height: 100%;
-  background: #2a2a2a;
-  transform: skewY(-49deg);
-}
-
-.button_1 span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #2a2a2a;
   color: #fff;
-  font-size: 25px;
-  transition: 1.1s ease-out;
+  overflow: hidden;
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
-.button_1:hover span {
-  z-index: 1000;
-  transition: 0.3s;
-  color: yellow;
+.btn:hover {
+  background: rgb(61, 106, 255);
+  box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
-.button_1:hover span:nth-child(5) {
-  transform: translate(40px, -40px);
-  opacity: 1;
+.btn:hover::before {
+  -webkit-animation: sh02 0.5s 0s linear;
+  -moz-animation: sh02 0.5s 0s linear;
+  animation: sh02 0.5s 0s linear;
 }
 
-.button_1:hover span:nth-child(4) {
-  transform: translate(30px, -30px);
-  opacity: 0.8;
-  background: linear-gradient(yellow, rgb(0, 183, 255));
+.btn::before {
+  content: '';
+  display: block;
+  width: 0px;
+  height: 86%;
+  position: absolute;
+  top: 7%;
+  left: 0%;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 50px 30px #fff;
+  transform: skewX(-20deg);
 }
 
-.button_1:hover span:nth-child(3) {
-  transform: translate(20px, -20px);
-  opacity: 0.6;
-  background: linear-gradient(yellow, rgb(9, 145, 236));
+@keyframes sh02 {
+  from {
+    opacity: 0;
+    left: 0%;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    left: 100%;
+  }
 }
 
-.button_1:hover span:nth-child(2) {
-  transform: translate(10px, -10px);
-  opacity: 0.4;
-  background: linear-gradient(yellow, rgb(4, 97, 236));
+.btn:active {
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: box-shadow 0.2s ease-in;
+  -moz-transition: box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in;
 }
 
-.button_1:hover span:nth-child(1) {
-  transform: translate(0px, 0px);
-  opacity: 0.2;
-  background: linear-gradient(yellow, rgb(3, 27, 241));
-}
-
-.button_1:active span:nth-child(5) {
-  transform: translate(20px, -20px);
-  opacity: 1;
-}
-
-.button_1:active span:nth-child(4) {
-  transform: translate(15px, -15px);
-}
-
-.button_1:active span:nth-child(3) {
-  transform: translate(10px, -10px);
-}
-
-.button_1:active span:nth-child(2) {
-  transform: translate(5px, -5px);
-}
-
-.button_1:active span:nth-child(1) {
-  transform: translate(0px, 0px);
-}
-
-.button_1:nth-child(1):hover span {
-  background: #339e6c;
-}
   
 .Lable_cards{
   position: relative;
@@ -1111,109 +1112,67 @@ body {
 }
 }
 
-.checkbox{
+.container_chekbox_1 {
   position: relative;
-  top: -10px;
+  top: 10%;
+  
 }
-.container_chekbox_1{
-    position: relative;
-    margin-top: 40%;
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 8em;
+  height: 4em;
 }
-.checkbox-wrapper_1 .check {
-    --size: 40px;
-    position: relative;
-    background: linear-gradient(90deg, #c079f0, #9860e2);
-    line-height: 0;
-    perspective: 400px;
-    font-size: var(--size);
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"],
-    .checkbox-wrapper_1 .check label,
-    .checkbox-wrapper_1 .check label::before,
-    .checkbox-wrapper_1 .check label::after,
-    .checkbox-wrapper_1 .check {
-    appearance: none;
-    display: inline-block;
-    border-radius: var(--size);
-    border: 0;
-    transition: .35s ease-in-out;
-    box-sizing: border-box;
-    cursor: pointer;
-  }
-  
-  .checkbox-wrapper_1 .check label {
-    width: calc(2.2 * var(--size));
-    height: var(--size);
-    background: #d7d7d7;
-    overflow: hidden;
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"] {
-    position: absolute;
-    z-index: 1;
-    width: calc(.8 * var(--size));
-    height: calc(.8 * var(--size));
-    top: calc(.1 * var(--size));
-    left: calc(.1 * var(--size));
-    background: linear-gradient(45deg, #dedede, #ffffff);
-    box-shadow: 0 6px 7px rgba(0,0,0,0.3);
-    outline: none;
-    margin: 0;
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"]:checked {
-    left: calc(1.3 * var(--size));
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"]:checked + label {
-    background: transparent;
-  }
-  
-  .checkbox-wrapper_1 .check label::before,
-    .checkbox-wrapper_1 .check label::after {
-    content: "· ·";
-    position: absolute;
-    overflow: hidden;
-    left: calc(.15 * var(--size));
-    top: calc(.5 * var(--size));
-    height: var(--size);
-    letter-spacing: calc(-0.04 * var(--size));
-    color: #9b9b9b;
-    font-family: "Times New Roman", serif;
-    z-index: 2;
-    font-size: calc(.6 * var(--size));
-    border-radius: 0;
-    transform-origin: 0 0 calc(-0.5 * var(--size));
-    backface-visibility: hidden;
-  }
-  
-  .checkbox-wrapper_1 .check label::after {
-    content: "●";
-    top: calc(.65 * var(--size));
-    left: calc(.2 * var(--size));
-    height: calc(.1 * var(--size));
-    width: calc(.35 * var(--size));
-    font-size: calc(.2 * var(--size));
-    transform-origin: 0 0 calc(-0.4 * var(--size));
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"]:checked + label::before,
-    .checkbox-wrapper_1 .check input[type="checkbox"]:checked + label::after {
-    left: calc(1.55 * var(--size));
-    top: calc(.4 * var(--size));
-    line-height: calc(.1 * var(--size));
-    transform: rotateY(360deg);
-  }
-  
-  .checkbox-wrapper_1 .check input[type="checkbox"]:checked + label::after {
-    height: calc(.16 * var(--size));
-    top: calc(.55 * var(--size));
-    left: calc(1.6 * var(--size));
-    font-size: calc(.6 * var(--size));
-    line-height: 0;
-  }
-  
+
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #00ad17;
+  transition: 0.4s;
+  border-radius: 1em;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 4em;
+  width: 4em;
+  background-color: rgb(255, 255, 255);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='10px' height='10px' viewBox='0 0 36 36' aria-hidden='true' role='img' class='iconify iconify--twemoji' preserveAspectRatio='xMidYMid meet'%3E%3Cpath fill='%23F6DDCD' d='M34.956 17.916c0-.503-.12-.975-.321-1.404c-1.341-4.326-7.619-4.01-16.549-4.221c-1.493-.035-.639-1.798-.115-5.668c.341-2.517-1.282-6.382-4.01-6.382c-4.498 0-.171 3.548-4.148 12.322c-2.125 4.688-6.875 2.062-6.875 6.771v10.719c0 1.833.18 3.595 2.758 3.885C8.195 34.219 7.633 36 11.238 36h18.044a3.337 3.337 0 0 0 3.333-3.334c0-.762-.267-1.456-.698-2.018c1.02-.571 1.72-1.649 1.72-2.899c0-.76-.266-1.454-.696-2.015c1.023-.57 1.725-1.649 1.725-2.901c0-.909-.368-1.733-.961-2.336a3.311 3.311 0 0 0 1.251-2.581z'/%3E%3Cpath fill='%23DFA994' d='M23.02 21.249h8.604c1.17 0 2.268-.626 2.866-1.633a.876.876 0 0 0-1.506-.892a1.588 1.588 0 0 1-1.361.775h-8.81c-.873 0-1.583-.71-1.583-1.583s.71-1.583 1.583-1.583H28.7a.875.875 0 0 0 0-1.75h-5.888a3.337 3.337 0 0 0-3.333 3.333c0 1.025.475 1.932 1.205 2.544a3.32 3.32 0 0 0-.998 2.373c0 1.028.478 1.938 1.212 2.549a3.318 3.318 0 0 0 .419 5.08a3.305 3.305 0 0 0-.852 2.204a3.337 3.337 0 0 0 3.333 3.333h5.484a3.35 3.35 0 0 0 2.867-1.632a.875.875 0 0 0-1.504-.894a1.594 1.594 0 0 1-1.363.776h-5.484c-.873 0-1.583-.71-1.583-1.583s.71-1.583 1.583-1.583h6.506a3.35 3.35 0 0 0 2.867-1.633a.875.875 0 1 0-1.504-.894a1.572 1.572 0 0 1-1.363.777h-7.063a1.585 1.585 0 0 1 0-3.167h8.091a3.35 3.35 0 0 0 2.867-1.632a.875.875 0 0 0-1.504-.894a1.573 1.573 0 0 1-1.363.776H23.02a1.585 1.585 0 0 1 0-3.167z'/%3E%3C/svg%3E");
+  background-size: contain; 
+  background-repeat: no-repeat;
+  transition: 0.2s;
+  transition-timing-function: cubic-bezier(0.75, 0.02, 0.86, 1.31);
+  transform-origin: bottom left;
+  border-radius: 1em;
+}
+
+.switch input:checked + .slider {
+  background-color: #ff0000;
+  border-radius: 1em;
+}
+
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #000000;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(0em) rotate(-90deg);
+} 
+
+
 .toggle-switch {
     position: relative;
     display: inline-block;
@@ -1291,8 +1250,7 @@ body {
     opacity: 1;
     max-width: 100vw;   
     max-height: 100vh; 
-    width: auto;
-    height: auto; 
+    
     z-index: -1;
 }
 .logo_2 {
@@ -1324,81 +1282,25 @@ body {
     pointer-events: none;
 }
 
-@media only screen and (max-width: 1200px) {
-    .made{
-        width: 400px;
-        height: 80px;
-    }
+@media (min-width: 1200px) {
+
 }
 
-@media only screen and (max-width: 1000px){
-    .made{
-        width: 350px;
-        height: 90px;
-        font-size: 40px;
-    }
-    .window_auth{
-        font-size: 30px;
-    }
-    #container_myMade{
-      transform: scale(0.8);
-    }
+@media (min-width: 991px){
+  .body{
+    overflow: hidden;
+  }
 }
 
-@media only screen and  (max-width: 790px){
-    .made{
-        width: 280px;
-    }
-
-    .window_auth{
-        font-size: 25px;
-    }
-    .cards .card {
-        width: 150px;
-        height: 70px;
-    }
-    #container_myMade{
-      transform: scale(0.8)
-    }
-}
-@media only screen and  (max-width: 700px){
-    .made{
-        width: 280px;
-    }
-
-    .window_auth{
-        font-size: 25px;
-    }
-    .cards .card {
-        width: 100px;
-        height: 70px;
-    }
-    #container_myMade{
-      transform: scale(0.8)
-    }
+@media (min-width: 768px){
+    
 }
 
-@media only screen and  (max-width: 650px){
-    .window_auth{
-        font-size: 20px;
-    }
-    .cards .card {
-        width: 100px;
-        height: 50px;
-        gap: 10px;
-    }
-    #container_myMade{
-      transform: scale(0.6)
-    }
+@media (min-width: 567px){
+    
 }
 
-@media only screen and  (max-width: 500px){
-    .window_auth{
-        font-size: 15px;
-    }#container_myMade{
-      transform: scale(0.6)
-    }
-}
+
 
 @keyframes snow {
   0% {
