--- a/links.css
+++ b/links.css
@@ -90,3 +90,24 @@ ul {
     background-color: #0088cc;
   }
   
+
+  
+  @media (max-width: 1200px) {
+    
+  }
+  
+  @media (max-width: 992px){
+      
+  }
+  
+  @media (max-width: 768px){
+  
+  }
+  
+  @media (max-width: 480px){
+      .example-2{
+          flex-direction: row;
+      }
+  }
+  @media (max-width: 320px){
+  }  
