--- a/main.css
+++ b/main.css
@@ -13,8 +13,8 @@
 
 body {
     overflow-x: hidden;
-    min-width: 100vw;
-    min-height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     font-family: Arial, sans-serif;
     background-image: url(https://images.wallpaperscraft.ru/image/single/fon_nebo_tochki_83482_1920x1080.jpg);
     background-size: cover;
@@ -1248,8 +1248,8 @@ body {
     top: 10px;
     left: 70%;
     opacity: 1;
-    max-width: 100vw;   
-    max-height: 100vh; 
+    width: 900px;
+    height: 900px;
     
     z-index: -1;
 }
@@ -1260,44 +1260,49 @@ body {
     top: 700px;
     left: -300px;
     opacity: 70%;
-    max-width: 90vw;   
-    max-height: 90vh; 
-    width: auto;
-    height: auto; 
+     
+    width: 900px;
+    height: 900px;
     z-index: -1;
     transform: scale(-1, 1);
 }
 .logo_3 {
     display: block;
     position: absolute;
-    right: -400px;
+    left: 70vh;
     top: 150%;
     opacity: 0.5;
     width: 900px;
     height: 900px;
-    max-width: 100%;
-    max-height: 100%;
     object-fit: contain;
     z-index: -1;
     pointer-events: none;
 }
 
-@media (min-width: 1200px) {
+
+
+@media (max-width: 1200px) {
 
 }
 
-@media (min-width: 991px){
+@media (max-width: 991px){
   .body{
     overflow: hidden;
   }
 }
 
-@media (min-width: 768px){
+@media (max-width: 768px){
     
 }
 
-@media (min-width: 567px){
-    
+@media (max-width: 567px){
+  .logo_1{
+    display: none;
+  }
+  body{
+    overflow-x: hidden;
+    width: 100vw;
+  }
 }
 
 
